# Hi-mina

./: .pdm.toml.example  CHANGELOG  README.md  app.py  pyproject.toml  requirements.txt
api-test/: chat.sh
script/: api_key.py  insert_key.sql  users.sql
