[tool.pdm.dev-dependencies]
lint = [
    "ruff"
]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs"]

[project]
name = "Hi-mina"
version = "1.1.0"
description = "An API Service for Open Source LLMs"
authors = [
    {name = "MathxH Chen", email = "brainfvck@foxmail.com"},
]


dependencies = [
    "python-dotenv==0.21.0",
    "pyOpenSSL>19.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "sse-starlette>=1.3.3",
    "pydantic>=1.10.5",
    "llama-cpp-python",
]

requires-python = ">=3.8.10"


[tool.ruff]
line-length = 140
src = ["model", "router", "utils", "api.py", "app.py", "config.py"]
ignore = ["E501"]

[tool.pytype]
inputs = ["model", "router", "utils", "api.py", "app.py", "config.py"]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"